Sprint-5: layout bug fixed

--- a/src/components/order-block/order-block.module.css
+++ b/src/components/order-block/order-block.module.css
@@ -38,4 +38,5 @@
 .icons{
     display: flex;
     padding-left: 0;
+    list-style-type: none;
 }
